--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#portfolio">Portfafolio</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -73,7 +73,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -170,33 +170,49 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About Us</h2>
+        <h2>Nosotros</h2>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      </div><div class="container">
+  <div class="row gy-4">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo</span></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-          </div>
-
-        </div>
-
+    <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
+      <p>
+        En <strong>R&G Automotriz</strong>, somos su destino de confianza para el cuidado automotriz en San Miguel, Santiago.
+        Fundados hace <strong>X</strong> años, nos hemos consolidado como un taller mecánico de excelencia,
+        comprometido con la calidad, la seguridad y el rendimiento de cada vehículo.
+      </p>
+      <p>
+        Lo que nos distingue es nuestra profunda conexión con el mundo del motor de alto rendimiento.
+        Somos el taller oficial y corazón técnico de <strong>JHC Racing</strong>, un equipo de rally de competición
+        que eleva la pasión por la velocidad y la precisión mecánica al siguiente nivel. Esta experiencia
+        en el exigente ambiente de las carreras nos permite aplicar un nivel superior de conocimiento,
+        diagnóstico y ejecución en cada servicio que ofrecemos, llevando la ingeniería de competición
+        directamente a su automóvil de uso diario.
+      </p>
       </div>
+
+    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+      <h3>Nuestra Misión:</h3>
+      <p>
+        Proporcionar soluciones automotrices integrales y de vanguardia, impulsadas por la misma precisión
+        y dedicación que aplicamos en las pistas de rally. Nos comprometemos a garantizar la seguridad,
+        el rendimiento y la durabilidad de su vehículo, superando las expectativas a través de un servicio
+        transparente, eficiente y un equipo técnico de élite.
+      </p>
+      <h3>Nuestra Visión:</h3>
+      <p>
+        Ser el taller mecánico de referencia en Chile, reconocido no solo por nuestra excelencia en el servicio
+        general, sino también por nuestra capacidad de llevar el espíritu y la tecnología del automovilismo
+        de competición a cada cliente. Buscamos inspirar confianza y pasión por la mecánica, tanto en la calle
+        como en la pista.
+      </p>
+      <p>
+        En R&G Automotriz, cada ajuste, cada revisión, cada reparación se realiza con la mentalidad de un campeón.
+        Confíe su vehículo a expertos que viven y respiran la mecánica de alto rendimiento.
+      </p>
+      <a href="#services" class="read-more"><span>Nuestros Servicios</span><i class="bi bi-arrow-right"></i></a>
+    </div>
 
     </section><!-- /About Section -->
 
@@ -1090,8 +1106,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Contacto</h2>
+        <p>Agenda tu hora, contáctanos o visitanos para poder brindarte el mejor servicio.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1104,28 +1120,27 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>Dirección</h3>
+                  <p>XXXX José Miguel Carrera, La Florida, Santiago</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Llámanos</h3>
+                  <p>+56 9 6390 1701</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <h3>Escríbenos un Email</h3>
+                  <p>rygautomotriz@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d310.43132020712017!2d-70.60234183290859!3d-33.55046877043409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDMzJzAxLjYiUyA3MMKwMzYnMDcuNiJX!5e0!3m2!1ses!2scl!4v1752176955989!5m2!1ses!2scl" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -1134,31 +1149,31 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
+                  <label for="name-field" class="pb-2">Tu Nombre</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
+                  <label for="email-field" class="pb-2">Tu Email</label>
                   <input type="email" class="form-control" name="email" id="email-field" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Subject</label>
+                  <label for="subject-field" class="pb-2">Asunto</label>
                   <input type="text" class="form-control" name="subject" id="subject-field" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
+                  <label for="message-field" class="pb-2">Mensaje</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div class="loading">Cargando...</div>
+                  <div class="error-message">Error, Intentelo nuevamente más tarde.</div>
+                  <div class="sent-message">Tu mensaje ha sido enviado con éxito. Gracias!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Enviar Mensaje</button>
                 </div>
 
               </div>
@@ -1175,22 +1190,7 @@
 
   <footer id="footer" class="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+  
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -1199,40 +1199,40 @@
             <span class="sitename">R&G Automotriz</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>XXXX José Miguel Carrera, La Florida, Santiago</p>
+            <p>La Florida, Santiago</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+56 9 6390 1701</span></p>
+            <p><strong>Email:</strong> <span>rygautomotriz@gmail.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Links Útiles</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Nosotros</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Servicios</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nuestros Servicios</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Mantenciones</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Revisión Técnica</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Asesoramiento</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Cambio de Aceite</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
+          <h4>Siguenos</h4>
           <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
           <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href="https://x.com/rygautomotriz"><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/ryg_automotriz/"><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
@@ -1247,7 +1247,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://github.com/BenjaminRoj">BenjaminRoj</a>
       </div>
     </div>
 
